--- a/client/src/style/css/App.scss
+++ b/client/src/style/css/App.scss
@@ -2,57 +2,8 @@ body {
   background: #FFFFFF;
 }
 
-.card.hovercard {
-  position: relative;
-  padding-top: 0;
-  overflow: hidden;
-  text-align: center;
-  background-color: rgba(214, 224, 226, 0.2);
-} 
-
-.card.hovercard .cardheader {
-  background-image: url('/img/bg/bg.jpg');
-  background-size: cover;
-  height: 135px;
-}
-
-.card.hovercard .avatar {
-  position: relative;
-  top: -50px;
-  margin-bottom: -50px;
-}
-
-.card.hovercard .avatar img {
-  width: 100px;
-  height: 100px;
-  max-width: 100px;
-  max-height: 100px;
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  border-radius: 50%;
-  
-}
-
-.card.hovercard .info {
-  padding: 4px 8px 10px;
-}
-
-.card.hovercard .info .title {
-  margin-bottom: 4px;
-  font-size: 24px;
-  line-height: 1;
-  color: #262626;
-  vertical-align: middle;
-}
-
-.card.hovercard .info .desc {
-  overflow: hidden;
-  font-size: 12px;
-  line-height: 20px;
-  color: #737373;
-  text-overflow: ellipsis;
-}
- 
+.dn{  display: none;}
+.db{ display:block;}
 
 
 /* login */
