--- a/client/src/style/css/chatwindow.scss
+++ b/client/src/style/css/chatwindow.scss
@@ -1,10 +1,9 @@
-
 .popup-box {
    background-color: #ffffff;
     border: 1px solid #b0b0b0;
     bottom: 0;
     /*display: none;*/
-    height: 415px;
+    height: 430px;
     position: fixed;
     right: 70px;
     width: 300px;
@@ -82,12 +81,11 @@
     height: 34px !important;
     margin: 7px;
     padding: 5px !important;
-     border: medium none;
+    border: medium none;
     width: 95% !important;
 }
 .popup-messages-footer {
     background: #fff none repeat scroll 0 0;
-    bottom: 0;
     position: absolute;
     width: 100%;
 }
@@ -204,94 +202,103 @@
     margin: -21px 0 0;
     width: 40px;
 }
-.direct-chat-reply-name {
-    color: #fff;
-    font-size: 15px;
-    margin: 0 0 0 10px;
-    opacity: 0.9;
-}
+ 
 
-.direct-chat-img-reply-small
-{
-    border: 1px solid #fff;
-    border-radius: 50%;
-    float: left;
-    height: 20px;
-    margin: 0 8px;
-    width: 20px;
-	background:#3f9684;
-}
 
-.popup-messages .direct-chat-msg {
-    margin-bottom: 10px;
-    position: relative;
-}
-
-.popup-messages .doted-border::after {
-	background: transparent none repeat scroll 0 0 !important;
-    border-right: 2px dotted #fff !important;
-	bottom: 0;
-    content: "";
-    left: 17px;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    width: 2px;
-	 display: inline;
-	  z-index: -2;
-}
-
-.popup-messages .direct-chat-msg::after {
-    background: #fff none repeat scroll 0 0;
-    border-right: medium none;
-    bottom: 0;
-    content: "";
-    left: 17px;
-    margin: 0;
-    position: absolute;
-    top: 0;
-    width: 2px;
-	 display: inline;
-	  z-index: -2;
-}
-.direct-chat-text::after, .direct-chat-text::before {
-   
-    border-color: transparent #dfece7 transparent transparent;
+.chatwindow{
+  
+  .img-circle{
+   width:100%
     
+  }
+  .mytext{
+    border:0;padding:10px;background:whitesmoke;
 }
-.direct-chat-text::after, .direct-chat-text::before {
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    border-color: transparent #d2d6de transparent transparent;
-    border-image: none;
-    border-style: solid;
-    border-width: medium;
-    content: " ";
-    height: 0;
-    pointer-events: none;
-    position: absolute;
-    right: 100%;
-    top: 15px;
+.text{
+    width:75%;display:flex;flex-direction:column;
+}
+.text > p:first-of-type{
+    width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
+}
+.text > p:last-of-type{
+    width:100%;text-align:right;color:silver;margin-bottom:-7px;margin-top:auto;
+}
+.text-l{
+    float:left;padding-right:10px;
+}        
+.text-r{
+    float:right;padding-left:10px;
+}
+.avatar{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    width:25%;
+    float:left;
+    padding-right:10px;
+}
+.macro{
+    margin-top:5px;width:85%;border-radius:5px;padding:5px;display:flex;
+}
+.msj-rta{
+    float:right;background:whitesmoke;
+}
+.msj{
+    float:left;background:white;
+}
+.frame{
+    background:#e0e0de;
+    height:450px;
+    overflow:hidden;
+    padding:0;
+}
+.frame > div:last-of-type{
+    position:absolute;bottom:5px;width:100%;display:flex;
+}
+ul {
+    width:100%;
+    list-style-type: none;
+    padding:18px;
+    bottom:32px;
+    display:flex;
+    flex-direction: column;
+
+}
+.msj:before{
     width: 0;
+    height: 0;
+    content:"";
+    top:-5px;
+    left:-14px;
+    position:relative;
+    border-style: solid;
+    border-width: 0 13px 13px 0;
+    border-color: transparent #ffffff transparent transparent;            
 }
-.direct-chat-text::after {
-    border-width: 5px;
-    margin-top: -5px;
+.msj-rta:after{
+    width: 0;
+    height: 0;
+    content:"";
+    top:-5px;
+    left:14px;
+    position:relative;
+    border-style: solid;
+    border-width: 13px 13px 0 0;
+    border-color: whitesmoke transparent transparent transparent;           
+}  
+input:focus{
+    outline: none;
+}        
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: #d4d4d4;
 }
-.popup-messages .direct-chat-text {
-    background: #dfece7 none repeat scroll 0 0;
-    border: 1px solid #dfece7;
-    border-radius: 2px;
-    color: #1f2121;
+::-moz-placeholder { /* Firefox 19+ */
+    color: #d4d4d4;
 }
-.direct-chat-text {
-    background: #d2d6de none repeat scroll 0 0;
-    border: 1px solid #d2d6de;
-    border-radius: 5px;
-    color: #444;
-    margin: 5px 0 0 50px;
-    padding: 5px 10px;
-    position: relative;
+:-ms-input-placeholder { /* IE 10+ */
+    color: #d4d4d4;
 }
+:-moz-placeholder { /* Firefox 18- */
+    color: #d4d4d4;
+}   
+}   
