--- a/client/src/style/css/userlist.scss
+++ b/client/src/style/css/userlist.scss
@@ -1,16 +1,29 @@
 .userlist-container{
-  .row-section{ float:left; width:100%; background: #42275a;}
-  .row-section h2{float:left; width:100%; color:#fff; margin-bottom:30px; font-size: 14px;}
-  .row-section h2 span{font-family: 'Libre Baskerville', serif; display:block; font-size:45px; text-transform:none; margin-bottom:20px; margin-top:30px;font-weight:700;}
-  .row-section h2 a{color:#d2abce;}
-  .row-section .row-block{background:#fff; padding:20px; margin:20px 0;}
-  .row-section .row-block ul{margin:0; padding:0;}
-  .row-section .row-block ul li{list-style:none; margin-bottom:20px;}
-  .row-section .row-block ul li:last-child{margin-bottom:0;}
-  .row-section .row-block .media{border:1px solid #d5dbdd; padding:5px 20px; border-radius: 5px; box-shadow:0px 2px 1px rgba(0,0,0,0.04); background:#fff;}
-  .row-section .media .media-left img{width:75px;}
-  .row-section .media .media-body p{padding: 0 15px; font-size:14px;}
-  .row-section .media .media-body h4 {color: #6b456a; font-size: 18px; font-weight: 600; margin-bottom: 0; padding-left: 14px; margin-top:12px;}
-  .btn-default{background:#6B456A; color:#fff; border-radius:30px; border:none; font-size:16px;}
+  .media{
+    border:1px solid #d5dbdd;
+    padding:5px 20px;
+    border-radius: 5px;
+    box-shadow:0px 2px 1px rgba(0,0,0,0.04); 
+    background:#fff;
+  }
+  .well{
+    border-bottom:  1px solid rgb(227, 227, 227);
+    border: 0;
+  }
 
+  img{
+    width:75px;
+    border: 1px solid #7b7b7b;
+    border-radius: 50%;
+    width: 75%;
+    min-width: 75px;
+
+  }
+  .media-left{
+    padding: 0px
+  }
+
+  .well  {
+    margin-bottom: 0; 
+  }
 }
