Image uplod functionality
1) Image on listing,
2) Image on chat window
3) Image on Profile view

--- a/client/src/style/css/userlist.scss
+++ b/client/src/style/css/userlist.scss
@@ -12,12 +12,11 @@
   }
 
   img{
-    width:75px;
-    border: 1px solid #7b7b7b;
+    width: 75px;
+    border: 1px solid rgb(123, 123, 123);
     border-radius: 50%;
-    width: 75%;
     min-width: 75px;
-
+    margin-right: 10px;
   }
   .media-left{
     padding: 0px
