Image upload functionality

--- a/client/src/style/css/signup.scss
+++ b/client/src/style/css/signup.scss
@@ -19,6 +19,7 @@
     padding: 24px;
     border: 1px solid #cccccc;
     border-radius: 4px;
+    min-height: 508px;
   }
   .color {
     color: #57cbcc;
