--- a/client/src/style/css/header.scss
+++ b/client/src/style/css/header.scss
@@ -12,7 +12,7 @@
   }
 
   .initials{
-    color: rgb(255, 255, 255); background-color: #c6c699;
+    color: rgb(255, 255, 255); background-color: #aca5ad;
     cursor: pointer;
     display: inline-block; font-family: Arial,"Helvetica Neue",Helvetica,sans-serif;
     font-size: 36px; border-radius: 90px; width: 90px; height: 90px; line-height: 90px; text-align: center;
