--- a/client/src/style/css/userprofile.scss
+++ b/client/src/style/css/userprofile.scss
@@ -2,8 +2,9 @@
 
   .profile 
   {
-    min-height: 355px;
-    display: inline-block;
+    h2{
+       margin-top: 0px;
+    }
   }
    
   figure {
@@ -15,57 +16,7 @@
   {
     border-top:1px solid rgba(0,0,0,0.1);
   }
-  .emphasis 
-  {
-    border-top: 4px solid transparent;
-  }
-  .emphasis:hover 
-    {
-    border-top: 4px solid #1abc9c;
-  }
-  .emphasis h2
-  {
-    margin-bottom:0;
-  }
-  span.tags 
-  {
-    background: #1abc9c;
-    border-radius: 2px;
-    color: #f5f5f5;
-    font-weight: bold;
-    padding: 2px 4px;
-  }
-  .dropdown-menu 
-  {
-    background-color: #34495e;    
-    box-shadow: none;
-    -webkit-box-shadow: none;
-    width: 250px;
-    margin-left: -125px;
-    left: 50%;
-  }
-  .dropdown-menu .divider 
-  {
-    background:none;    
-  }
-  .dropdown-menu>li>a
-  {
-    color:#f5f5f5;
-  }
-  .dropup .dropdown-menu 
-  {
-    margin-bottom:10px;
-  }
-  .dropup .dropdown-menu:before 
-    {
-    content: "";
-    border-top: 10px solid #34495e;
-    border-right: 10px solid transparent;
-    border-left: 10px solid transparent;
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    margin-left: -10px;
-    z-index: 10;
-  }
+  
+  
+  
 }
