--- a/client/src/style/css/App.scss
+++ b/client/src/style/css/App.scss
@@ -1,44 +1,50 @@
 .body{
-  .container-full{
-    width:100%;
-    margin:0 auto;
-  }
-}
- 
-.navbar-default{
-  background-color:#2c3850;
-  .navbar-nav{
-    float:none;
-    li{
-      a{
-        color:#fff;
-        &:hover{
-          color: rgb(220, 218, 112);
-        }
-        &:active {
-          color: rgb(220, 218, 112);
-        }
-        &:focus{
-            color: rgb(220, 218, 112);
-        }
-      }
-      a.active{
-        color: rgb(220, 218, 112);
-      }
+    .container-full{
+        width:100%;
+        margin:0 auto;
     }
-  }
+}
+
+.navbar-default{
+    background-color:#2c3850;
+    .navbar-nav{
+        float:none;
+        li{
+            a{
+                color:#fff;
+                &:hover{
+                    color: rgb(220, 218, 112);
+                }
+                &:active {
+                    color: rgb(220, 218, 112);
+                }
+                &:focus{
+                    color: rgb(220, 218, 112);
+                }
+            }
+            a.active{
+                color: rgb(220, 218, 112);
+            }
+        }
+    }
 }
 
 .login-component {
-  color: #808080;
+    color: #808080;
+}
+.logoImg-connect{
+    width: 100%
 }
 
 
-
-.landing-page{
-  
+.speech-container{
+    position: fixed;
+    z-index: 100000;
+    bottom: 0;
+    margin: 20px;
 }
-/// post overrite///
+
+
 
 .dn{  display: none;}
 .db{ display:block;}
