--- a/client/src/style/css/App.scss
+++ b/client/src/style/css/App.scss
@@ -1,50 +1,119 @@
-.body{
-    .container-full{
-        width:100%;
-        margin:0 auto;
-    }
+.body {
+	.container-full {
+		width: 100%;
+		margin: 0 auto;
+	}
 }
 
-.navbar-default{
-    background-color:#2c3850;
-    .navbar-nav{
-        float:none;
-        li{
-            a{
-                color:#fff;
-                &:hover{
-                    color: rgb(220, 218, 112);
-                }
-                &:active {
-                    color: rgb(220, 218, 112);
-                }
-                &:focus{
-                    color: rgb(220, 218, 112);
-                }
-            }
-            a.active{
-                color: rgb(220, 218, 112);
-            }
-        }
-    }
+.navbar-default {
+	background-color: #2c3850;
+	.navbar-nav {
+		float: none;
+		li {
+			a {
+				color: #fff;
+				&:hover {
+					color: rgb(220, 218, 112);
+				}
+				&:active {
+					color: rgb(220, 218, 112);
+				}
+				&:focus {
+					color: rgb(220, 218, 112);
+				}
+			}
+			a.active {
+				color: rgb(220, 218, 112);
+			}
+		}
+	}
 }
 
 .login-component {
-    color: #808080;
+	color: #808080;
 }
-.logoImg-connect{
-    width: 100%
-}
-
-
-.speech-container{
-    position: fixed;
-    z-index: 100000;
-    bottom: 0;
-    margin: 20px;
+.logoImg-connect {
+	width: 100%;
 }
 
+.speech-container {
+	position: fixed;
+	z-index: 100000;
+	bottom: 0;
+	margin: 20px;
+}
 
+.dn {
+	display: none;
+}
+.db {
+	display: block;
+}
 
-.dn{  display: none;}
-.db{ display:block;}
+.context-dark,
+.bg-gray-dark,
+.bg-primary {
+	color: rgba(255, 255, 255, 0.8);
+}
+
+.footer-classic a,
+.footer-classic a:focus,
+.footer-classic a:active {
+	color: #ffffff;
+}
+.nav-list li {
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+
+.nav-list li a:hover:before {
+	margin-left: 0;
+	opacity: 1;
+	visibility: visible;
+}
+
+ul,
+ol {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+.social-inner {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+	padding: 23px;
+	font: 900 13px/1 "Lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+	text-transform: uppercase;
+	color: rgba(255, 255, 255, 0.5);
+
+	.fab {
+        font-size: 20px;
+        margin-bottom: 10px;
+	}
+	i {
+		
+	}
+}
+
+.social-container {
+	margin: 0;
+}
+
+.social-container .col {
+	border: 1px solid rgba(255, 255, 255, 0.1);
+}
+.nav-list li a:before {
+	content: "\f14f";
+	font: 400 21px/1 "Material Design Icons";
+	color: #4d6de6;
+	display: inline-block;
+	vertical-align: baseline;
+	margin-left: -28px;
+	margin-right: 7px;
+	opacity: 0;
+	visibility: hidden;
+	transition: .22s ease;
+}
